--- a/html/Study-3.html
+++ b/html/Study-3.html
@@ -120,14 +120,7 @@
         <button class="toggle-btn">展开or收起</button>
     </div>
 
-    <script>
-        const container = document.querySelector('.container');
-        const toggleBtn = document.querySelector('.toggle-btn');
-
-        toggleBtn.addEventListener('click', () => {
-            container.classList.toggle('expanded');
-        });
-    </script>
+    <script src="scripts/Study-3.js"></script>
 </body>
 
 </html>
