--- a/html/Study-10.html
+++ b/html/Study-10.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>抽卡动画</title>
+    <title>卡片点击抽取</title>
     <style>
         body {
             display: flex;
