--- a/index.html
+++ b/index.html
@@ -216,6 +216,12 @@
                     <div class="link-description">依旧使用Shiki进行Markdown渲染。</div>
                 </a>
             </div>
+            <div class="card">
+                <a href="html/Study-9.html" class="link">
+                    <div class="link-title">卡片点击抽取</div>
+                    <div class="link-description">看起来挺有趣</div>
+                </a>
+            </div>
         </div>
     </div>
 
