--- a/index.html
+++ b/index.html
@@ -222,6 +222,12 @@
                     <div class="link-description">看起来挺有趣</div>
                 </a>
             </div>
+            <div class="card">
+                <a href="html/Study-11.html" class="link">
+                    <div class="link-title">每日任务</div>
+                    <div class="link-description">自律的人真的很可怕！</div>
+                </a>
+            </div>
         </div>
     </div>
 
