--- a/index.html
+++ b/index.html
@@ -228,6 +228,12 @@
                     <div class="link-description">自律的人真的很可怕！</div>
                 </a>
             </div>
+            <div class="card">
+                <a href="html/Study-12.html" class="link">
+                    <div class="link-title">绘画画板</div>
+                    <div class="link-description">这可真是太Photoshop了</div>
+                </a>
+            </div>
         </div>
     </div>
 
