--- a/html/Study-12.html
+++ b/html/Study-12.html
@@ -92,7 +92,7 @@
     </style>
 </head>
 <body>
-    <h1>多巴胺绘画板</h1>
+    <h1>绘画板</h1>
     <div id="canvas-container">
         <canvas id="drawingCanvas" width="512" height="512"></canvas>
     </div>
