--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <link rel="icon" href="icons/1f330.webp">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>导航页</title>
+    <title>创新博客导航</title>
     <style>
         :root {
-            --primary-color: #4a90e2;
-            --hover-color: #357abd;
-            --background-color: #f9f9f9;
+            --primary-color: #2c3e50;
+            --secondary-color: #e74c3c;
+            --background-color: #ecf0f1;
             --card-color: #ffffff;
-            --text-color: #333333;
-            --secondary-text-color: #666666;
+            --text-color: #34495e;
         }
         body {
             font-family: 'Segoe UI', 'Microsoft YaHei', sans-serif;
@@ -20,154 +19,127 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            scroll-behavior: smooth;
-            line-height: 1.6;
+            overflow-x: hidden;
         }
         .container {
-            max-width: 1000px;
-            width: 100%;
+            max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-            box-sizing: border-box;
         }
         header {
-            background-color: var(--primary-color);
             color: white;
             text-align: center;
-            padding: 40px 0;
-            margin-bottom: 30px;
+            padding: 60px 0;
+            position: relative;
+            overflow: hidden;
         }
         h1 {
-            color: white;
+            font-size: 3em;
             margin: 0;
-            font-weight: 300;
-            font-size: 2.5em;
+            position: relative;
+            z-index: 1;
         }
         .subtitle {
             font-size: 1.2em;
             margin-top: 10px;
-            opacity: 0.8;
+            position: relative;
+            z-index: 1;
+        }
+        .header-bg {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(45deg, #ff6b6b, #4ecdc4, #45b7d1, #f7d794);
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
+        }
+        @keyframes gradientBG {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
         .grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
             gap: 30px;
-            padding: 20px;
+            padding: 40px 20px;
         }
         .card {
             background-color: var(--card-color);
-            border-radius: 10px;
+            border-radius: 15px;
             overflow: hidden;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
-            display: flex;
-            flex-direction: column;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+            position: relative;
         }
         .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+            transform: translateY(-10px) rotate(2deg);
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
         }
         .link {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            height: 100%;
-            padding: 20px;
+            display: block;
+            padding: 30px;
             text-decoration: none;
             color: var(--text-color);
-            transition: background-color 0.3s ease;
-        }
-        .link:hover {
-            background-color: var(--primary-color);
-            color: white;
-        }
-        .link:hover .link-description {
-            color: white;
+            height: 100%;
+            box-sizing: border-box;
         }
         .link-title {
-            font-size: 1.4em;
-            margin-bottom: 10px;
-            word-wrap: break-word;
+            font-size: 1.6em;
+            margin-bottom: 15px;
+            font-weight: bold;
         }
         .link-description {
             font-size: 1em;
-            color: var(--secondary-text-color);
-            transition: color 0.3s ease;
-            word-wrap: break-word;
-            flex-grow: 1;
+            color: #7f8c8d;
         }
         .search-container {
             display: flex;
             justify-content: center;
-            align-items: center;
-            margin-bottom: 30px;
-        }
-        .search-icon {
-            font-size: 24px;
-            cursor: pointer;
-            transition: opacity 0.3s ease;
-            margin-right: 10px;
-            color: var(--text-color);
+            margin: 40px 0;
         }
         #search {
-            width: 300px;
-            padding: 10px;
-            border: 2px solid var(--primary-color);
-            border-radius: 20px;
-            font-size: 1em;
-            background: white;
-            color: var(--text-color);
-            transition: width 0.3s ease;
-            outline: none;
+            width: 60%;
+            max-width: 500px;
+            padding: 15px;
+            border: none;
+            border-radius: 30px;
+            font-size: 1.1em;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
         }
         #search:focus {
-            width: 350px;
-        }
-        #search::placeholder {
-            color: var(--secondary-text-color);
+            width: 70%;
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
+            outline: none;
         }
         .github-link {
             position: fixed;
             bottom: 20px;
             right: 20px;
             transition: transform 0.3s ease;
+            z-index: 1000;
         }
         .github-link:hover {
             transform: scale(1.1);
         }
         .github-logo {
-            width: 32px;
-            height: 32px;
+            width: 50px;
+            height: 50px;
             fill: #24292e;
+            filter: drop-shadow(0 0 5px rgba(0,0,0,0.3));
         }
-        footer {
-            text-align: center;
-            padding: 20px 0;
-            background-color: var(--primary-color);
-            color: white;
-            margin-top: 50px;
-        }
-        @media (max-width: 600px) {
+        @media (max-width: 768px) {
             .grid {
                 grid-template-columns: 1fr;
             }
-            .card {
-                height: auto;
-            }
-            .link {
-                padding: 15px;
-            }
-            .link-title {
-                font-size: 1.2em;
-            }
-            .link-description {
-                font-size: 0.9em;
-            }
             #search {
-                width: 200px;
+                width: 80%;
             }
             #search:focus {
-                width: 250px;
+                width: 90%;
             }
         }
     </style>
@@ -175,13 +147,14 @@
 </head>
 <body>
     <header>
-        <h1>导航页</h1>
-        <p class="subtitle">请开始你的学习！</p>
+        <div class="header-bg"></div>
+        <h1>HTML-Study</h1>
+        <p class="subtitle">请开始你的学习</p>
     </header>
     
     <div class="container">
         <div class="search-container">
-            <input type="text" id="search" placeholder="搜索文章...">
+            <input type="text" id="search" placeholder="Searching...">
         </div>
         <div class="grid">
             <div class="card">
@@ -259,39 +232,12 @@
         </div>
     </div>
 
-    <footer>
-        <p>&copy; 2024 HTML-Study. xiaoliziawa保留所有权利.</p>
-    </footer>
-
     <a href="https://github.com/xiaoliziawa/HTML-Study" target="_blank" class="github-link">
         <svg class="github-logo" viewBox="0 0 16 16" version="1.1" aria-hidden="true">
             <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
         </svg>
     </a>
 
-    <script>
-        function filterCards(searchTerm) {
-            const cards = document.querySelectorAll('.card');
-            searchTerm = searchTerm.toLowerCase();
-            const pinyinSearchTerm = pinyinPro.pinyin(searchTerm, { toneType: 'none', type: 'array' }).join('');
-
-            cards.forEach(card => {
-                const title = card.querySelector('.link-title').textContent;
-                const description = card.querySelector('.link-description').textContent;
-                const content = title + ' ' + description;
-                const pinyinContent = pinyinPro.pinyin(content, { toneType: 'none', type: 'array' }).join('');
-
-                if (content.toLowerCase().includes(searchTerm) || pinyinContent.includes(pinyinSearchTerm)) {
-                    card.style.display = 'flex';
-                } else {
-                    card.style.display = 'none';
-                }
-            });
-        }
-
-        document.getElementById('search').addEventListener('input', function() {
-            filterCards(this.value);
-        });
-    </script>
+    <script src="index-script.js"></script>
 </body>
 </html>
