--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="icons/1f330.webp">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>创新博客导航</title>
+    <title>HTML-Study</title>
     <style>
         :root {
             --primary-color: #2c3e50;
