--- a/index.html
+++ b/index.html
@@ -229,6 +229,12 @@
                     <div class="link-description">这可真是太Photoshop了</div>
                 </a>
             </div>
+            <div class="card">
+                <a href="html/Study-13.html" class="link">
+                    <div class="link-title">ThreeJS魅力时刻!</div>
+                    <div class="link-description">因为不会,所以这个是CV大法过来的(</div>
+                </a>
+            </div>
         </div>
     </div>
 
