--- a/html/Study-13.html
+++ b/html/Study-13.html
@@ -89,6 +89,38 @@
                 };
             }
         });
+
+        // Mobile touch support
+        document.addEventListener('touchstart', function(e) {
+            isDragging = true;
+            previousMousePosition = {
+                x: e.touches[0].clientX,
+                y: e.touches[0].clientY
+            };
+        });
+
+        document.addEventListener('touchend', function() {
+            isDragging = false;
+        });
+
+        document.addEventListener('touchmove', function(e) {
+            if (isDragging) {
+                let deltaMove = {
+                    x: e.touches[0].clientX - previousMousePosition.x,
+                    y: e.touches[0].clientY - previousMousePosition.y
+                };
+
+                transform.rotateY += deltaMove.x * 0.5;
+                transform.rotateX -= deltaMove.y * 0.5;
+
+                cube.style.transform = `rotateX(${transform.rotateX}deg) rotateY(${transform.rotateY}deg)`;
+
+                previousMousePosition = {
+                    x: e.touches[0].clientX,
+                    y: e.touches[0].clientY
+                };
+            }
+        });
     </script>
 </body>
 </html>
