--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="icons/1f330.webp">
@@ -13,6 +14,7 @@
             --card-color: #ffffff;
             --text-color: #34495e;
         }
+
         body {
             font-family: 'Segoe UI', 'Microsoft YaHei', sans-serif;
             background-color: var(--background-color);
@@ -21,11 +23,13 @@
             box-sizing: border-box;
             overflow-x: hidden;
         }
+
         .container {
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
         }
+
         header {
             color: white;
             text-align: center;
@@ -33,18 +37,21 @@
             position: relative;
             overflow: hidden;
         }
+
         h1 {
             font-size: 3em;
             margin: 0;
             position: relative;
             z-index: 1;
         }
+
         .subtitle {
             font-size: 1.2em;
             margin-top: 10px;
             position: relative;
             z-index: 1;
         }
+
         .header-bg {
             position: absolute;
             top: 0;
@@ -55,17 +62,28 @@
             background-size: 400% 400%;
             animation: gradientBG 15s ease infinite;
         }
+
         @keyframes gradientBG {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
+            0% {
+                background-position: 0% 50%;
+            }
+
+            50% {
+                background-position: 100% 50%;
+            }
+
+            100% {
+                background-position: 0% 50%;
+            }
         }
+
         .grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
             gap: 30px;
             padding: 40px 20px;
         }
+
         .card {
             background-color: var(--card-color);
             border-radius: 15px;
@@ -74,10 +92,12 @@
             transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
             position: relative;
         }
+
         .card:hover {
             transform: translateY(-10px) rotate(2deg);
             box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
         }
+
         .link {
             display: block;
             padding: 30px;
@@ -86,20 +106,24 @@
             height: 100%;
             box-sizing: border-box;
         }
+
         .link-title {
             font-size: 1.6em;
             margin-bottom: 15px;
             font-weight: bold;
         }
+
         .link-description {
             font-size: 1em;
             color: #7f8c8d;
         }
+
         .search-container {
             display: flex;
             justify-content: center;
             margin: 40px 0;
         }
+
         #search {
             width: 60%;
             max-width: 500px;
@@ -110,11 +134,13 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
         }
+
         #search:focus {
             width: 70%;
             box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
             outline: none;
         }
+
         .github-link {
             position: fixed;
             bottom: 20px;
@@ -122,22 +148,27 @@
             transition: transform 0.3s ease;
             z-index: 1000;
         }
+
         .github-link:hover {
             transform: scale(1.1);
         }
+
         .github-logo {
             width: 50px;
             height: 50px;
             fill: #24292e;
-            filter: drop-shadow(0 0 5px rgba(0,0,0,0.3));
+            filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.3));
         }
+
         @media (max-width: 768px) {
             .grid {
                 grid-template-columns: 1fr;
             }
+
             #search {
                 width: 80%;
             }
+
             #search:focus {
                 width: 90%;
             }
@@ -145,13 +176,14 @@
     </style>
     <script src="https://cdn.jsdelivr.net/npm/pinyin-pro@3.13.2/dist/index.js"></script>
 </head>
+
 <body>
     <header>
         <div class="header-bg"></div>
         <h1>HTML-Study</h1>
         <p class="subtitle">请开始你的学习</p>
     </header>
-    
+
     <div class="container">
         <div class="search-container">
             <input type="text" id="search" placeholder="Searching...">
@@ -232,7 +264,7 @@
             <div class="card">
                 <a href="html/Study-13.html" class="link">
                     <div class="link-title">ThreeJS魅力时刻!</div>
-                    <div class="link-description">因为不会,所以这个是CV大法过来的(</div>
+                    <div class="link-description">因为不会,所以这个是CV大法过来的 (</div>
                 </a>
             </div>
         </div>
@@ -240,10 +272,13 @@
 
     <a href="https://github.com/xiaoliziawa/HTML-Study" target="_blank" class="github-link">
         <svg class="github-logo" viewBox="0 0 16 16" version="1.1" aria-hidden="true">
-            <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
+            <path fill-rule="evenodd"
+                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
+            </path>
         </svg>
     </a>
 
     <script src="index-script.js"></script>
 </body>
+
 </html>
