--- a/index.html
+++ b/index.html
@@ -268,6 +268,13 @@
                 </a>
             </div>
             <div class="card">
+                <a href="html/Study-14.html" class="link">
+                    <div class="link-title">超立方体(ThreeJS)</div>
+                    <div class="link-description">CV大法好啊!</div>
+                    <div class="link-description">正在学习ThreeJS QAQ</div>
+                </a>
+            </div>
+            <div class="card">
                 <a href="html/Mandelbulb.html" class="link">
                     <div class="link-title">曼德尔球(ThreeJS)</div>
                     <div class="link-description">因为不会,所以这个也是CV大法过来的 什么时候我也能这么厉害就好了</div>
